[package]
name = "drawingportfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
askama = "0.15"
# Note: we use askama's .render() manually wrapped in axum::response::Html — no askama_web needed
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
aws-sdk-s3 = "1"
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "limit", "trace"] }
tower = "0.5"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
url = "2"
mime = "0.3"
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png"] }
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.34", features = ["serde"] }  # pinned: 0.4.35+ renames Duration to TimeDelta
